--- a/views/layout.html
+++ b/views/layout.html
@@ -1,6 +1,7 @@
 {{block 'head'}}
+<link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css">
 <link rel="stylesheet" href="/stylesheets/style.css">
-<link rel="shortcut icon" href="/typescript.svg" type="image/x-icon">
+<link rel="shortcut icon" href="/images/typescript.svg" type="image/x-icon">
 {{/block}}
 
 {{block 'title'}}
@@ -14,4 +15,5 @@
 {{/block}}
 
 {{block 'footer'}}
+<script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.min.js"></script>
 {{/block}}
