Implement user registration.

--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -1,7 +1,10 @@
 {{block 'head'}}
-<link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css">
-<link rel="stylesheet" href="/stylesheets/style.css">
-<link rel="shortcut icon" href="/images/typescript.svg" type="image/x-icon">
+<link
+  rel="stylesheet"
+  href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css"
+/>
+<link rel="stylesheet" href="/stylesheets/style.css" />
+<link rel="shortcut icon" href="/images/typescript.svg" type="image/x-icon" />
 {{/block}}
 
 {{block 'title'}}
