Update project structure; implement user login.

--- a/src/view/login.html
+++ b/src/view/login.html
@@ -10,7 +10,7 @@
 
 {{block 'content'}}
 <main class="form-signin w-100 m-auto">
-  <form>
+  <form action="/login" method="post">
     <img class="mb-4" src="/images/svelte.svg" alt="" width="72" height="57" />
     <img class="mb-4" src="/images/vite.svg" alt="" width="72" height="57" />
     <h1 class="h3 mb-3 fw-normal">{{ title }}</h1>
