--- a/src/views/user.html
+++ b/src/views/user.html
@@ -1,6 +1,7 @@
 {{extend 'layout.html'}}
 
 {{block 'content'}}
-<h1>{{ msg }}</h1>
+<h1>{{ title }}</h1>
+<h2>{{ msg }}</h2>
 <pre>{{ user }}</pre>
 {{/block}}
