--- a/src/views/register.html
+++ b/src/views/register.html
@@ -11,8 +11,8 @@
 {{block 'content'}}
 <main class="form-signin w-100 m-auto">
   <form action="/register" method="post">
-    <img class="mb-4" src="/images/svelte.svg" alt="" width="72" height="57" />
-    <img class="mb-4" src="/images/vite.svg" alt="" width="72" height="57" />
+    <img class="mb-4" src="/images/typescript.svg" alt="" width="72" height="57" />
+    <!-- <img class="mb-4" src="/images/vite.svg" alt="" width="72" height="57" /> -->
     <h1 class="h3 mb-3 fw-normal">{{ title }}</h1>
 
     <div class="form-floating">
@@ -49,7 +49,7 @@
     </div>
 
     <button class="w-100 btn btn-lg btn-primary" type="submit">Register</button>
-    <p class="mt-4 mb-3">Already have an account? <a href="/login">sign in</a>.</p>
+    <p class="mt-4 mb-3">Already have an account? <a href="/login">Sign in</a>.</p>
   </form>
 </main>
 {{/block}}
