--- a/src/views/login.html
+++ b/src/views/login.html
@@ -11,8 +11,8 @@
 {{block 'content'}}
 <main class="form-signin w-100 m-auto">
   <form action="/login" method="post">
-    <img class="mb-4" src="/images/svelte.svg" alt="" width="72" height="57" />
-    <img class="mb-4" src="/images/vite.svg" alt="" width="72" height="57" />
+    <img class="mb-4" src="/images/typescript.svg" alt="" width="72" height="57" />
+    <!-- <img class="mb-4" src="/images/vite.svg" alt="" width="72" height="57" /> -->
     <h1 class="h3 mb-3 fw-normal">{{ title }}</h1>
 
     <div class="form-floating">
@@ -38,11 +38,11 @@
       <label for="password">Password</label>
     </div>
 
-    <div class="checkbox mb-3 text-right">
+    <!-- <div class="checkbox mb-3">
       <label> <input type="checkbox" value="remember-me" /> Remember me </label>
-    </div>
+    </div> -->
     <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
-    <p class="mt-4 mb-3">New to MB? <a href="/register">create an accout</a>.</p>
+    <p class="mt-4 mb-3">New to MB? <a href="/register">Create an accout</a>.</p>
   </form>
 </main>
 {{/block}}
