Implement user profile query and update.

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,4 +3,7 @@
 {{block 'content'}}
 <h2>{{ title }}</h2>
 <p> {{ msg }} </p>
+{{if user}}
+<p>Welcome back, <code>Lord {{ user.username }}</code></p>
+{{/if}}
 {{/block}}
