--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -54,10 +54,29 @@ a {
   width: 20px;
   height: 20px;
   border-radius: 8px;
-  margin-top: -2px;
+  margin-top: -3px;
   margin-right: 6px;
 }
 
 .content {
   padding: 24px 36px;
+}
+
+.profile {
+  max-width: 640px;
+  margin: 0 auto;
+}
+
+.profile h2,
+.profile h4 {
+  text-align: center;
+}
+
+.profile .form-radio-control {
+  border-color: transparent;
+  padding-left: 0;
+}
+
+.profile .form-radio-control .form-check-label {
+  cursor: pointer;
 }
