--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,6 +4,6 @@
 <h2>{{ title }}</h2>
 <p> {{ msg }} </p>
 {{if user}}
-<p>Welcome back, <code>Lord {{ user.username }}</code></p>
+<p>Welcome back, <code>Lord {{ user.nickname }}</code></p>
 {{/if}}
 {{/block}}
