--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -1,11 +1,11 @@
 <html lang="en">
-{{block 'head'}}
 <link
   rel="stylesheet"
   href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css"
 />
 <link rel="stylesheet" href="/stylesheets/style.css" />
 <link rel="shortcut icon" href="/images/typescript.svg" type="image/x-icon" />
+{{block 'head'}}
 {{/block}}
 
 {{block 'title'}}
@@ -40,7 +40,7 @@
         <form action="/logout" method="post">
           <div class="dropdown">
             <a class="btn btn-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <img src={{ user.avatar }} alt="Avatar" title={{ user.username }} class="avatar">{{ user.username }}
+              <img src="{{ user.avatar }}" alt="Avatar" title="{{ user.nickname }}" class="avatar">{{ user.nickname }}
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
               <li><a class="dropdown-item" href="/user">Profile</a></li>
@@ -66,7 +66,7 @@
 {{/block}}
 </section>
 
-{{block 'footer'}}
 <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
+{{block 'footer'}}
 {{/block}}
 </html>
