--- a/src/views/myTopic.html
+++ b/src/views/myTopic.html
@@ -7,10 +7,10 @@
 
 <ul class="nav nav-tabs mb-3">
   <li class="nav-item">
-    <a class="nav-link active" href="/">All Topics</a>
+    <a class="nav-link" href="/">All Topics</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/myTopic">My Topics</a>
+    <a class="nav-link active" href="/myTopic">My Topics</a>
   </li>
 </ul>
 
