--- a/src/views/profile.html
+++ b/src/views/profile.html
@@ -8,7 +8,7 @@
 <div class="profile">
   <h2>{{ title }}</h2>
   <h4><img src="{{ user.avatar }}" alt="Avatar" title="{{ user.username }}" width="48" height="48"></h4>
-  <form action="/user/update" method="post">
+  <form action="/profile/update" method="post">
     <input type="hidden" name="_id" value="{{ user._id.toString() }}">
     <div class="mb-3">
       <label for="avatar" class="form-label">Avatar</label>
