--- a/src/views/myTopics.html
+++ b/src/views/myTopics.html
@@ -7,7 +7,7 @@
 <div class="topicList list-group">
   {{each formatTopics}}
   <div class="d-flex list-group-item list-group-item-action gap-3">
-    <img src="{{ $value.user.avatar }}" alt="avatar" title="{{ $value.user.nickname }}" width="32" height="32" class="rounded-circle flex-shrink-0">
+    <img src="{{ user.avatar }}" alt="avatar" title="{{ user.nickname }}" width="32" height="32" class="rounded-circle flex-shrink-0">
     <div class="d-flex w-100 justify-content-between">
       <a href="/topic/{{ $value._id }}">
         <h5 class="mb-1">{{ $value.title }}</h5>
