--- a/src/views/post.html
+++ b/src/views/post.html
@@ -5,10 +5,10 @@
   <h2>{{ title }}</h2>
   <h4><img src="{{ user.avatar }}" alt="Avatar" title="{{ user.username }}" width="48" height="48"></h4>
   <form action="/topic/post" method="post">
-    <input type="hidden" name="_id" value="{{ user._id.toString() }}">
+    <input type="hidden" name="user" value="{{ user._id.toString() }}">
     <div class="mb-3">
-      <label for="nickname" class="form-label">Author</label>
-      <input type="text" class="form-control" id="nickname" name="nickname" disabled value="{{ user.nickname }}">
+      <label for="nickname" class="form-label">Initiator</label>
+      <input type="text" class="form-control" id="nickname" disabled value="{{ user.nickname }}">
     </div>
     <div class="mb-3">
       <label for="title" class="form-label">Title</label>
