--- a/src/views/tabs.html
+++ b/src/views/tabs.html
@@ -1,6 +1,8 @@
+{{if user}}
 <div class="text-end">
   <a href="/topic/post" class="btn btn-dark">New Topic</a>
 </div>
+{{/if}}
 
 <ul class="nav nav-tabs mb-3">
   <li class="nav-item">
