--- a/src/views/topicDetail.html
+++ b/src/views/topicDetail.html
@@ -32,9 +32,7 @@
 
 {{block 'content'}}
 <div id="topicContent" class="topicContent">
-  <textarea class="form-control" name="content" id="content" style="display: none;">
-    {{ topic?.content }}
-  </textarea>
+  <textarea name="content" id="content" style="display: none;">{{ topic?.content }}</textarea>
 </div>
 {{/block}}
 
